hphp/hack/test/typecheck/simplihack/no_hash.php.exp
ERROR: File "no_hash.php", line 4, characters 16-25:
Run AI Code Action by clicking on this position in the file (Typing[4493])
