hphp/hack/test/typecheck/simplihack/no_hash.php
<?hh
<<file: __EnableUnstableFeatures('simpli_hack')>>

<<__SimpliHack('A prompt')>>
class C {}
